--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/router": "^14.2.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "bootstrap": "^5.3.1",
+    "font-awesome": "^4.7.0",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.7.32",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
